<resources>
    <string name="app_name">Yoda Quizz</string>
    <string name="title_activity_main">Yoda Quizz</string>
    <string name="title_activity_list_quizz">Liste des Quizz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Yoda Quizz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Paramètre</string>
    <string name="nav_header_pseudo">*Pseudo ici*</string>
    <string name="title_activity_settings">Paramètre</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_display_pseudo">Changer de pseudo</string>
    <string name="pref_default_display_pseudo">Valoo</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_title_maj_titre">MAJ des Quizz</string>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="CvQuizzQuestion">Questions</string>
    <string name="cvQuizzPlay">JOUER </string>
    <string name="CvQuizzDifficult">Difficulté :</string>
    <string name="CvQuizzDetailType">Types :</string>
    <string name="CVQuizzDetailTheme">Thèmes :</string>
    <string name="cvQuizzDetailDescription">Description :</string>
    <string name="cvQuizzDetailTo">De :</string>
    <string name="cvQuizzDetailThe">, Le :</string>
    <string name="cvQuizzModif">MODIFIER</string>
    <string name="btn_stat">STAT</string>

    <string name="tvInfoDescript">Moyenne De Réussite : </string>
    <string name="tvInfoBase">0 % : 0 Bonnes reponses</string>
    <string name="tvInfoPart1"> % : </string>
    <string name="tvInfoPart2"> Bonnes reponses </string>

    <string name="title_activity_quizz">Quizz</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="btn_exit_quizz">Quitter</string>
    <string name="btn_joker_quizz">Joker</string>
    <string name="btn_valid_quizz">Valider</string>
    <string name="congratulation">Félicitation !!!</string>

    <string name="btnPopUpNext">Suivant.</string>
    <string name="btnPopUpEnd">Terminé.</string>

    <string name="phraseyoda_1">Boit le café, le talent arrivera.</string>
    <string name="phraseyoda_2">La surprise n\'est pas quand l\'etonnement n\'est plus.</string>
    <string name="phraseyoda_3">Dans le coté obscur, délicieux sont les cookies.</string>
    <string name="phraseyoda_4">J\'ai appris E=MC2, ce jour là.</string>
    <string name="phraseyoda_5">Dormir tu doit sinon fatigué tu sera.</string>
    <string name="phraseyoda_6">Le maitre tu ne dépassera jamais.</string>
    <string name="phraseyoda_7">Te démerder tu devras, sans moi tu joueras.</string>
    <string name="phraseyoda_8">Grande est ta force, Plus petite que moi quand méme.</string>
    <string name="phraseyoda_9">Ta torture je prépare, ton silence je m\'empare.</string>
    <string name="phraseyoda_10">Faire Souffrir mon diciple je ferai.</string>
    <string name="phraseyoda_11">Dans la lave Skywalker à finis.</string>
    <string name="phraseyoda_12">Quand 900 ans comme moi tu auras, Moins en forme tu seras.</string>
    <string name="phraseyoda_13">Ehouer tu as, Mieux faire tu devras.</string>
    <string name="phraseyoda_14">Pleine de doigts, Mes mains sont.</string>
    <string name="phraseyoda_15">Intelligent tu n\'est pas, Chanceux tu est.</string>

    <string name="reponseCorrect">Bonne réponse !</string>
    <string name="reponseWrong">Mauvaise réponse !</string>
    <string name="reponseTime">Temps écoulé !</string>
</resources>
